--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               text-shadow: 5px 2px 5px rgb(0, 0, 0);
             "
           >
-            Un mensaje para tí🤍
+            Por nuestro 5to aniversario mi niña hermosa🤍
           </h1>
 
           <p
@@ -25,7 +25,7 @@
               text-shadow: 5px 2px 5px rgb(0, 0, 0);
             "
           >
-            2025.<br />
+            05/05/2025.<br />
           </p>
         </div>
         <div class="back">
@@ -70,24 +70,15 @@ Tal vez fue el destino, o tal vez solo fue suerte, pero sea lo que sea, me alegr
       <!--3 pagina-->
       <div class="page">
         <div class="front">
-          <h2>La Magia que Eres ✨💖</h2> 
+          <h2>Carta Especial✨💖</h2> 
 <p>
 
-Hay un encanto en ti, una belleza que las palabras no logran describir completamente. Está en el brillo de tus ojos, en la calidez de tu sonrisa, y en la forma tan natural en que iluminas cada momento. Cada detalle de ti me parece tan perfecto, tan hipnotizante, que a menudo me pregunto—
-
-¿Fuiste creada como una obra maestra?
-
-Es como si el universo hubiera tomado su tiempo, moldeando con esmero a alguien tan maravilloso como tú, solo para hacer que el mundo sea un poco más brillante. Y créeme, lo haces. Cada día, sin falta. 💕
-
-Tu presencia es como una suave melodía, calmante pero imposible de olvidar. La forma en que te llevas, la bondad en tu corazón y la pureza en tu alma te hacen aún más especial. No se trata solo de lo hermosa que eres por fuera, sino de lo hermosa que eres por dentro.
-
-Cada vez que te veo, me recuerda que hay cosas en la vida que simplemente son mágicas, y tú, sin duda, eres una de ellas. ✨💖
-
+Feliz 5to aniversario mi amor💗💗 , si lees esto es porque si llegamos a un mesesito más 🥹❤️, en este tiempo que he estado a tu lado ha sido lo mejor cariño 🥺❤️y no puedo estar más agradecido con eso, tenemos peleas y malos entendidos pero se arreglan y mejoran siempre mi vida 😔❤️‍🩹, espero seguir así y llegar a algo más , porque compartir momentos con la chica que amo , es lo que más deseo en este mundo🥹💗💗 , haces que mis días sean mejores 🥺❤️‍🩹 , me ayudas a mejorar y me apoyas en mis cosas, a veces tengo comportamientos muy inmaduros y perdóname por ellos mi niña 😔❤️‍🩹❤️‍🩹, quiero mejorar y hacerte sentir la mujer más amada y la niña más feliz❤️🥹.. Tienes unos ojitos hermosos mi niña y no sabes cuanto me duele verlos llorar... :( y peor cuando es por mi culpa :(❤️‍🩹 , tienes una voz que me calma 🥺❤️‍🩹 cuando me dices mi niño y que me amass cuando estamos en persona aaaahh ❤️❤️,  cada apodo🥺❤️‍🩹 , cada cariño ❤️‍🩹, cada cosa que venga de ti me hace bien y feliz 🥹❤️‍🩹, agradezco el haber vuelto a hablar.. conocernos mejor y darnos una oportunidad aah.... 🥺❤️‍🩹 ha Sido lo más bonito 🥹💗 y solo quiero que sepas que siempre te amare mi niña y apoyaré en todo ❤️🥺, te amo demasiado mi niña consentida, mi niña hermosa,  mi niña resentida, mi amorcitoooo , mi vidaaa, mi todo 🥹💗💗💗💗
 </p>
 
         </div>
         <div class="back">
-         <h2>La Fuerza Que Hay en Ti 💫✨</h2> 
+         <h2>Todo lo que me gusta de ti 💫✨</h2> 
 <p>
 
 Más allá de tu belleza, lo que realmente resalta es tu dedicación, tu esfuerzo y tu pasión. No eres alguien que simplemente se admire por su apariencia; eres una inspiración. La manera en que te mantienes enfocada, persigues tus sueños y das lo mejor de ti en todo lo que haces solo aumenta la admiración que siento por ti.
